--- a/package.json
+++ b/package.json
@@ -19,12 +19,17 @@
   },
   "homepage": "https://github.com/nakkarenukadevi/React_course.git#readme",
   "devDependencies": {
+    "autoprefixer": "^10.4.19",
     "parcel": "^2.12.0",
-    "process": "^0.11.10"
+    "postcss": "^8.4.39",
+    "process": "^0.11.10",
+    "tailwindcss": "^3.4.4"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1"
   }
 }
